kubernetes/kustomize/camerahub/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camerahub
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: camerahub-container
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: camerahub-container
    spec:
      containers:
        - image: djjudas21/camerahub:0.15.2
          imagePullPolicy: Always
          name: camerahub
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: media
              mountPath: /var/www/camerahub/media
              readOnly: false
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
