kubernetes/kustomize/camerahub/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camerahub
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: camerahub
              servicePort: 8000
            path: /
